--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border: 1px solid #f00;
 
     .jellyfish_five {
         position: absolute;
@@ -13,14 +14,14 @@
 
     .about_left {
         position: relative;
-     
+
         .about_box {
             position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
 
-            .about_photo{
+            .about_photo {
                 background-color: rgba(255, 255, 255, .5);
             }
 
@@ -30,25 +31,111 @@
                 bottom: -80px;
                 line-height: 1.5;
 
-                h2{
+                h2 {
                     font-family: var(--mainKorM-font);
                 }
 
-                p{
+                p {
                     font-family: var(--mainKorL-font);
                 }
-    
+
             }
         }
 
-       
+
     }
 
     .about_right {
         position: relative;
-        height: 45vh;
         margin: auto;
         overflow: hidden;
+
+        .aboutSwiper {
+            width: 100%;
+            height: 100%;
+            overflow: visible;
+
+            &::after {
+                content: '';
+                width: 1px;
+                height: 700px;
+                position: absolute;
+                left: 0;
+                top: 0;
+                background: repeating-linear-gradient(to bottom,
+                        /* 방향 */
+                        transparent 0,
+                        /* 투명 시작 */
+                        transparent 5px,
+                        /* 투명 길이 */
+                        rgba(4, 107, 169, .5) 0px,
+                        /* 선 색상 시작 */
+                        rgba(4, 107, 169, .5) 15px
+                        /* 선 색상 길이 */
+                    );
+            }
+
+            .swiper-slide {
+                width: 100%;
+                height: 100%;
+
+                .about_title {
+                    position: absolute;
+                    font-family: var(--mainEng-font);
+                    text-transform: capitalize;
+                    font-style: italic;
+                    font-weight: 700;
+                    padding-bottom: 50px;
+                    white-space: nowrap;
+
+                    span {
+                        font-family: var(--mainKorL-font);
+                        font-size: var(--font-size-KorST2);
+                        font-weight: 500;
+                        font-style: normal;
+                        padding-left: 10px;
+                    }
+                }
+
+                .about_line {
+                    padding: 100px 0 150px 0;
+                    position: absolute;
+                    left: -6px;
+                    top: 50%;
+                    transform: translateY(-50%);
+
+                    &::after {
+                        content: '';
+                        width: 10px;
+                        height: 10px;
+                        border-radius: 50%;
+                        border: 1px solid rgba(255, 255, 255, .3);
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                    }
+
+                    &::before {
+                        content: '';
+                        width: 10px;
+                        height: 10px;
+                        border-radius: 50%;
+                        border: 1px solid rgba(255, 255, 255, .3);
+                        position: absolute;
+                        left: 0;
+                        bottom: 0;
+                    }
+                }
+
+                .about_sub-title {
+                    position: absolute;
+                    font-family: var(--mainKorL-font);
+                    font-size: var(--font-size-KorST3);
+                    font-weight: 300;
+
+                }
+            }
+        }
 
         .swiper-button-prev {
             position: absolute;
@@ -80,95 +167,6 @@
             }
         }
 
-        .aboutSwiper {
-            width: 100%;
-            height: 100%;
-            overflow: visible;
-
-            &::after {
-                content: '';
-                width: 1px;
-                height: 700px;
-                position: absolute;
-                left: 0;
-                top: 0;
-                background: repeating-linear-gradient(to bottom,
-                        /* 방향 */
-                        transparent 0,
-                        /* 투명 시작 */
-                        transparent 5px,
-                        /* 투명 길이 */
-                        rgba(4, 107, 169, .5) 0px,
-                        /* 선 색상 시작 */
-                        rgba(4, 107, 169, .5) 15px
-                        /* 선 색상 길이 */
-                    );
-            }
-
-            .swiper-slide {
-                width: 80%;
-                height: 100%;
-
-                .about_title {
-                    position: absolute;
-                    top: 15%;
-                    font-family: var(--mainEng-font);
-                    text-transform: capitalize;
-                    font-style: italic;
-                    font-weight: 700;
-                    padding-bottom: 50px;
-                    white-space: nowrap;
-                    
-
-                    span {
-                        font-family: var(--mainKorL-font);
-                        font-size: var(--font-size-KorST2);
-                        font-weight: 500;
-                        font-style: normal;
-                        padding-left: 10px;
-                    }
-                }
-
-                .about_line {
-                    padding: 100px 0 150px 0;
-                    position: absolute;
-                    left: -6px;
-                    top: 50%;
-                    transform: translateY(-50%);
-
-                    &::after {
-                        content: '';
-                        width: 10px;
-                        height: 10px;
-                        border-radius: 50%;
-                        border: 1px solid rgba(255, 255, 255, .3);
-                        position: absolute;
-                        left: 0;
-                        top: 50px;
-                    }
-
-                    &::before {
-                        content: '';
-                        width: 10px;
-                        height: 10px;
-                        border-radius: 50%;
-                        border: 1px solid rgba(255, 255, 255, .3);
-                        position: absolute;
-                        left: 0;
-                        bottom: 50px;
-                    }
-                }
-
-                .about_sub-title {
-                    position: absolute;
-                    top: 40%;
-                    font-family: var(--mainKorL-font);
-                    font-size: var(--font-size-KorST3);
-                    font-weight: 300;
-       
-                }
-            }
-        }
     }
 
 }
@@ -182,7 +180,7 @@
             width: 100%;
             height: 50vh;
 
-            .about_photo{
+            .about_photo {
                 width: 250px;
                 height: 300px;
             }
@@ -190,9 +188,10 @@
 
         .about_right {
             width: 90%;
+            height: 50vh;
 
             #aboutSwiper-box {
-                width: 80%;
+                width: 100%;
                 margin-left: 80px;
                 height: 45vh;
             }
@@ -209,11 +208,12 @@
                 width: 75vw;
                 overflow: hidden;
             }
-            
+
             .about_title {
                 left: 29vw;
+                top: 15%;
                 font-size: var(--font-size-EngT1-M);
-                
+
                 span {
                     display: none;
                 }
@@ -221,10 +221,10 @@
 
             .about_sub-title {
                 left: 29vw;
-
+                top: 40%;
                 li {
                     padding: 10px 0;
-                    white-space: nowrap; 
+                    white-space: nowrap;
                     display: flex;
                     flex-direction: column;
 
@@ -233,25 +233,61 @@
                     }
                 }
 
-                &.career{
+                
+                &.Iam {
+
                     li{
-                        span{
+                        padding: 20px 0;
+                    }
+
+                    .num {
+                        position: relative;
+
+                        h2 {
+                            position: absolute;
+                            top: -35px;
+                            left: -20px;
+                            font-family: var(--mainNum-font);
+                            font-size: var(--font-size-Num1-M);
+                            font-style: italic;
+                            font-weight: 700;
+                            opacity: .3;
+                            line-height: 1;
+                        }
+    
+                        h3 {
+                            font-family: var(--mainKorM-font);
+                            font-size: var(--font-size-KorST3);
+                            line-height: 1.5;
+    
+                            span {
+                                font-family: var(--mainKorSB-font);
+                                text-transform: capitalize;
+                            }
+                        }
+                    }
+                }
+
+                &.career {
+                    li {
+                        span {
                             padding: 10px 90px;
                         }
                     }
                 }
 
-                &.license{
+                &.license {
                     left: 25vw;
-                    li{
+
+                    li {
                         display: inline-block;
 
-                        em{
+                        em {
                             display: inline-block;
                             width: 80px;
                         }
 
-                        span{
+                        span {
                             padding: 0;
                         }
                     }
@@ -263,7 +299,7 @@
                     flex-wrap: wrap;
                     gap: 10px;
 
-                    img{
+                    img {
                         width: 55px;
                         height: 55px;
                         object-fit: cover;
@@ -286,7 +322,7 @@
             width: 100%;
             height: 50vh;
 
-            .about_photo{
+            .about_photo {
                 width: 250px;
                 height: 300px;
             }
@@ -294,11 +330,12 @@
 
         .about_right {
             width: 90%;
+            height: 50vh;
 
             #aboutSwiper-box {
                 width: 80%;
                 margin-left: 80px;
-                height: 45vh;
+                height: 100%;
             }
 
             .swiper-button-next {
@@ -322,57 +359,102 @@
 
             .about_title {
                 left: 200px;
+                top: 15%;
                 font-size: var(--font-size-EngT1-P);
                 white-space: nowrap;
-                
+
             }
 
             .about_sub-title {
                 left: 200px;
+                top: 40%;
 
                 li {
                     padding: 10px 0;
+                    line-height: 1.5;
                 }
 
-                &.license{
-                    li{
+                &.Iam {
 
-                        em{
+                    li{
+                        padding: 20px 0;
+                        white-space: wrap;
+                    }
+
+                    .num {
+                        position: relative;
+
+                        h2 {
+                            position: absolute;
+                            top: -35px;
+                            left: -15px;
+                            font-family: var(--mainNum-font);
+                            font-size: var(--font-size-Num1-P);
+                            font-style: italic;
+                            font-weight: 700;
+                            opacity: .3;
+                            line-height: 1;
+                        }
+    
+                        h3 {
+                            font-family: var(--mainKorM-font);
+                            font-size: var(--font-size-KorST2);
+                            line-height: 1.5;
+    
+                            span {
+                                font-family: var(--mainEng-font);
+                                font-size: var(--font-size-KorST1);
+                                font-weight: 700;
+                                text-transform: capitalize;
+                            }
+                        }
+
+                        p{
+                            padding-left: 20px;
+                        }
+                    }
+                }
+
+                &.license {
+                    li {
+
+                        em {
                             display: inline-block;
                             width: 80px;
                         }
 
-                        span{
+                        span {
                             padding: 0;
                         }
                     }
                 }
 
 
-                 &.skills {
-                        width: 350px;
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 20px;
+                &.skills {
+                    width: 350px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 20px;
 
-                        img{
-                            width: 60px;
-                            height: 60px;
-                            object-fit: cover;
-                        }
+                    img {
+                        width: 60px;
+                        height: 60px;
+                        object-fit: cover;
                     }
+                }
 
-                &.education{
+                &.education {
 
-                    li{
+                    li {
                         white-space: nowrap;
-                        em{
+
+                        em {
                             display: inline-block;
                             width: 120px;
                         }
 
                     }
-                  
+
                 }
             }
         }
@@ -383,10 +465,11 @@
 @media (min-width:1024px) {
     #about {
         flex-direction: row;
+
         .about_left {
             width: 45vw;
 
-            .about_photo{
+            .about_photo {
                 width: 300px;
                 height: 400px;
             }
@@ -394,19 +477,20 @@
 
         .about_right {
             width: 45%;
+            height: 80vh;
+            
+            .about_title{
+                top: 28%;
+            }
 
             .about_sub-title {
-    
-                li{
+                top: 45%;
+                li {
                     white-space: nowrap;
                 }
-    
+
             }
         }
-
-      
-
-        
 
     }
 }
