--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -10,6 +10,7 @@
     --mainColor100-color: #003058;
     --mainColor200-color: #046BA9;
 
+    --subColor100-color: #F0F9FF;
     --subColor200-color: #BAE5FD;
     --subColor300-color: #7ED0FB;
     --subColor400-color: #0380C6;
