--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border: 1px solid #f00;
 }
 #about .jellyfish_five {
   position: absolute;
@@ -35,35 +36,8 @@
 }
 #about .about_right {
   position: relative;
-  height: 45vh;
   margin: auto;
   overflow: hidden;
-}
-#about .about_right .swiper-button-prev {
-  position: absolute;
-  top: 40%;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  transform: rotate(90deg);
-}
-#about .about_right .swiper-button-prev::after {
-  font-size: 15px;
-  color: rgba(255, 255, 255, 0.5);
-}
-#about .about_right .swiper-button-next {
-  position: absolute;
-  top: 60%;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  transform: rotate(90deg);
-}
-#about .about_right .swiper-button-next::after {
-  font-size: 15px;
-  color: rgba(255, 255, 255, 0.5);
 }
 #about .about_right .aboutSwiper {
   width: 100%;
@@ -80,12 +54,11 @@
   background: repeating-linear-gradient(to bottom, transparent 0, transparent 5px, rgba(4, 107, 169, 0.5) 0px, rgba(4, 107, 169, 0.5) 15px);
 }
 #about .about_right .aboutSwiper .swiper-slide {
-  width: 80%;
+  width: 100%;
   height: 100%;
 }
 #about .about_right .aboutSwiper .swiper-slide .about_title {
   position: absolute;
-  top: 15%;
   font-family: var(--mainEng-font);
   text-transform: capitalize;
   font-style: italic;
@@ -115,7 +88,7 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   position: absolute;
   left: 0;
-  top: 50px;
+  top: 0;
 }
 #about .about_right .aboutSwiper .swiper-slide .about_line::before {
   content: "";
@@ -125,14 +98,39 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   position: absolute;
   left: 0;
-  bottom: 50px;
+  bottom: 0;
 }
 #about .about_right .aboutSwiper .swiper-slide .about_sub-title {
   position: absolute;
-  top: 40%;
   font-family: var(--mainKorL-font);
   font-size: var(--font-size-KorST3);
   font-weight: 300;
+}
+#about .about_right .swiper-button-prev {
+  position: absolute;
+  top: 40%;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  transform: rotate(90deg);
+}
+#about .about_right .swiper-button-prev::after {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.5);
+}
+#about .about_right .swiper-button-next {
+  position: absolute;
+  top: 60%;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  transform: rotate(90deg);
+}
+#about .about_right .swiper-button-next::after {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 @media (max-width: 767px) {
@@ -150,9 +148,10 @@
   }
   #about .about_right {
     width: 90%;
+    height: 50vh;
   }
   #about .about_right #aboutSwiper-box {
-    width: 80%;
+    width: 100%;
     margin-left: 80px;
     height: 45vh;
   }
@@ -168,6 +167,7 @@
   }
   #about .about_right .about_title {
     left: 29vw;
+    top: 15%;
     font-size: var(--font-size-EngT1-M);
   }
   #about .about_right .about_title span {
@@ -175,6 +175,7 @@
   }
   #about .about_right .about_sub-title {
     left: 29vw;
+    top: 40%;
   }
   #about .about_right .about_sub-title li {
     padding: 10px 0;
@@ -184,6 +185,32 @@
   }
   #about .about_right .about_sub-title li span {
     padding: 10px 30px;
+  }
+  #about .about_right .about_sub-title.Iam li {
+    padding: 20px 0;
+  }
+  #about .about_right .about_sub-title.Iam .num {
+    position: relative;
+  }
+  #about .about_right .about_sub-title.Iam .num h2 {
+    position: absolute;
+    top: -35px;
+    left: -20px;
+    font-family: var(--mainNum-font);
+    font-size: var(--font-size-Num1-M);
+    font-style: italic;
+    font-weight: 700;
+    opacity: 0.3;
+    line-height: 1;
+  }
+  #about .about_right .about_sub-title.Iam .num h3 {
+    font-family: var(--mainKorM-font);
+    font-size: var(--font-size-KorST3);
+    line-height: 1.5;
+  }
+  #about .about_right .about_sub-title.Iam .num h3 span {
+    font-family: var(--mainKorSB-font);
+    text-transform: capitalize;
   }
   #about .about_right .about_sub-title.career li span {
     padding: 10px 90px;
@@ -228,11 +255,12 @@
   }
   #about .about_right {
     width: 90%;
+    height: 50vh;
   }
   #about .about_right #aboutSwiper-box {
     width: 80%;
     margin-left: 80px;
-    height: 45vh;
+    height: 100%;
   }
   #about .about_right .swiper-button-next {
     left: 0;
@@ -249,14 +277,49 @@
   }
   #about .about_right .about_title {
     left: 200px;
+    top: 15%;
     font-size: var(--font-size-EngT1-P);
     white-space: nowrap;
   }
   #about .about_right .about_sub-title {
     left: 200px;
+    top: 40%;
   }
   #about .about_right .about_sub-title li {
     padding: 10px 0;
+    line-height: 1.5;
+  }
+  #about .about_right .about_sub-title.Iam li {
+    padding: 20px 0;
+    white-space: wrap;
+  }
+  #about .about_right .about_sub-title.Iam .num {
+    position: relative;
+  }
+  #about .about_right .about_sub-title.Iam .num h2 {
+    position: absolute;
+    top: -35px;
+    left: -15px;
+    font-family: var(--mainNum-font);
+    font-size: var(--font-size-Num1-P);
+    font-style: italic;
+    font-weight: 700;
+    opacity: 0.3;
+    line-height: 1;
+  }
+  #about .about_right .about_sub-title.Iam .num h3 {
+    font-family: var(--mainKorM-font);
+    font-size: var(--font-size-KorST2);
+    line-height: 1.5;
+  }
+  #about .about_right .about_sub-title.Iam .num h3 span {
+    font-family: var(--mainEng-font);
+    font-size: var(--font-size-KorST1);
+    font-weight: 700;
+    text-transform: capitalize;
+  }
+  #about .about_right .about_sub-title.Iam .num p {
+    padding-left: 20px;
   }
   #about .about_right .about_sub-title.license li em {
     display: inline-block;
@@ -297,6 +360,13 @@
   }
   #about .about_right {
     width: 45%;
+    height: 80vh;
+  }
+  #about .about_right .about_title {
+    top: 28%;
+  }
+  #about .about_right .about_sub-title {
+    top: 45%;
   }
   #about .about_right .about_sub-title li {
     white-space: nowrap;
