--- a/src/css/pages/intro.css
+++ b/src/css/pages/intro.css
@@ -16,10 +16,12 @@
   position: relative;
   font-style: italic;
   font-weight: 700;
-  color: var(--subColor200-color);
+  color: var(--subColor100-color);
+  font-family: var(--mainEng-font);
 }
 #intro h2 em {
-  color: var(--white);
+  color: var(--mainColor100-color);
+  font-weight: 800;
 }
 #intro .dots {
   width: 50px;
@@ -37,10 +39,13 @@
 #intro p {
   font-size: 1.3rem;
   line-height: 1.5;
-  color: var(--subColor200-color);
+  color: var(--subColor100-color);
+  font-family: var(--mainKorM-font);
+  letter-spacing: 1px;
 }
 #intro p em {
-  color: var(--white);
+  color: var(--mainColor100-color);
+  font-family: var(--mainKorSB-font);
 }
 
 @media (max-width: 767px) {
