--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -25,6 +25,7 @@
    --font-size-KorST1: 28px;
    --font-size-KorST2: 22px;
    --font-size-KorST3: 18px;
+   --font-size-KorST4: 16px;
 
    --font-size-Num1-P: 70px;
    --font-size-Num1-M: 65px;
