--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -2,15 +2,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid #f00;
-
-    .jellyfish_five {
-        position: absolute;
-        left: 5%;
-        top: 5%;
-        z-index: 99;
-    }
-
 
     .about_left {
         position: relative;
@@ -41,8 +32,6 @@
 
             }
         }
-
-
     }
 
     .about_right {
@@ -58,10 +47,11 @@
             &::after {
                 content: '';
                 width: 1px;
-                height: 700px;
+                height: 500px;
                 position: absolute;
                 left: 0;
-                top: 0;
+                top: 50%;
+                transform: translateY(-50%);
                 background: repeating-linear-gradient(to bottom,
                         /* 방향 */
                         transparent 0,
@@ -139,10 +129,7 @@
 
         .swiper-button-prev {
             position: absolute;
-            top: 40%;
             border: 1px solid rgba(255, 255, 255, .5);
-            width: 50px;
-            height: 50px;
             border-radius: 50%;
             transform: rotate(90deg);
 
@@ -154,10 +141,7 @@
 
         .swiper-button-next {
             position: absolute;
-            top: 60%;
             border: 1px solid rgba(255, 255, 255, .5);
-            width: 50px;
-            height: 50px;
             border-radius: 50%;
             transform: rotate(90deg);
 
@@ -173,45 +157,43 @@
 
 @media (max-width:767px) {
     #about {
-        height: 100vh;
-        flex-direction: column;
 
         .about_left {
-            width: 100%;
-            height: 50vh;
-
-            .about_photo {
-                width: 250px;
-                height: 300px;
-            }
+            display: none;
         }
 
         .about_right {
-            width: 90%;
-            height: 50vh;
+            width: 95%;
+            height: 100vh;
 
             #aboutSwiper-box {
                 width: 100%;
-                margin-left: 80px;
-                height: 45vh;
-            }
-
-            .swiper-button-next {
-                left: 0;
+                margin-left: 50px;
+                height: 100%;
             }
 
             .swiper-button-prev {
+                top: 45%;
                 left: 0;
+                width: 35px;
+                height: 35px;
+            }
+
+            .swiper-button-next {
+                top: 57%;
+                left: 0;
+                width: 35px;
+                height: 35px;
             }
 
             .about_line {
-                width: 75vw;
+                width: 84vw;
                 overflow: hidden;
             }
 
             .about_title {
                 left: 29vw;
-                top: 15%;
+                top: 35%;
                 font-size: var(--font-size-EngT1-M);
 
                 span {
@@ -220,24 +202,23 @@
             }
 
             .about_sub-title {
-                left: 29vw;
-                top: 40%;
+                width: 60%;
+                left: 27vw;
+                top: 48%;
+
                 li {
-                    padding: 10px 0;
-                    white-space: nowrap;
+                    padding: 10px;
                     display: flex;
                     flex-direction: column;
-
-                    span {
-                        padding: 10px 30px;
-                    }
+        
                 }
 
-                
+
                 &.Iam {
 
-                    li{
+                    li {
                         padding: 20px 0;
+                        white-space: wrap;
                     }
 
                     .num {
@@ -246,32 +227,51 @@
                         h2 {
                             position: absolute;
                             top: -35px;
-                            left: -20px;
+                            left: -15px;
                             font-family: var(--mainNum-font);
-                            font-size: var(--font-size-Num1-M);
+                            font-size: var(--font-size-Num1-P);
                             font-style: italic;
                             font-weight: 700;
                             opacity: .3;
                             line-height: 1;
                         }
-    
+
                         h3 {
                             font-family: var(--mainKorM-font);
                             font-size: var(--font-size-KorST3);
                             line-height: 1.5;
-    
+
                             span {
-                                font-family: var(--mainKorSB-font);
+                                font-family: var(--mainEng-font);
+                                font-size: var(--font-size-KorST2);
+                                font-weight: 700;
                                 text-transform: capitalize;
                             }
+                        }
+
+                        p {
+                            padding-left: 20px;
+                            font-family: var(--mainKorL-font);
+                            font-size: var(--font-size-KorST4);
+                            line-height: 1.5;
                         }
                     }
                 }
 
+                &.education{
+                    span{
+                        padding-left: 20px;
+                        line-height: 1.5;
+                    }
+                }
+
+
                 &.career {
                     li {
+                        white-space: nowrap;
                         span {
-                            padding: 10px 90px;
+                            padding: 0 90px;
+                            line-height: 1.5;
                         }
                     }
                 }
@@ -319,18 +319,24 @@
         flex-direction: column;
 
         .about_left {
-            width: 100%;
-            height: 50vh;
-
-            .about_photo {
-                width: 250px;
-                height: 300px;
-            }
+            display: none;
         }
 
         .about_right {
             width: 90%;
-            height: 50vh;
+            height: 100vh;
+
+            .swiper-button-prev {
+                width: 50px;
+                height: 50px;
+                top: 40%;
+            }
+
+            .swiper-button-next {
+                width: 50px;
+                height: 50px;
+                top: 60%;
+            }
 
             #aboutSwiper-box {
                 width: 80%;
@@ -359,7 +365,7 @@
 
             .about_title {
                 left: 200px;
-                top: 15%;
+                top: 35%;
                 font-size: var(--font-size-EngT1-P);
                 white-space: nowrap;
 
@@ -367,7 +373,7 @@
 
             .about_sub-title {
                 left: 200px;
-                top: 40%;
+                top: 48%;
 
                 li {
                     padding: 10px 0;
@@ -376,7 +382,7 @@
 
                 &.Iam {
 
-                    li{
+                    li {
                         padding: 20px 0;
                         white-space: wrap;
                     }
@@ -395,12 +401,12 @@
                             opacity: .3;
                             line-height: 1;
                         }
-    
+
                         h3 {
                             font-family: var(--mainKorM-font);
                             font-size: var(--font-size-KorST2);
                             line-height: 1.5;
-    
+
                             span {
                                 font-family: var(--mainEng-font);
                                 font-size: var(--font-size-KorST1);
@@ -409,9 +415,15 @@
                             }
                         }
 
-                        p{
+                        p {
                             padding-left: 20px;
                         }
+                    }
+                }
+
+                &.career{
+                    span{
+                        padding-left: 15px;
                     }
                 }
 
@@ -467,6 +479,7 @@
         flex-direction: row;
 
         .about_left {
+            display: block;
             width: 45vw;
 
             .about_photo {
@@ -477,14 +490,25 @@
 
         .about_right {
             width: 45%;
-            height: 80vh;
-            
-            .about_title{
-                top: 28%;
+            height: 100vh;
+
+            .swiper-button-prev {
+                width: 50px;
+                height: 50px;
+            }
+
+            .swiper-button-next {
+                width: 50px;
+                height: 50px;
+            }
+
+            .about_title {
+                top: 35%;
             }
 
             .about_sub-title {
-                top: 45%;
+                top: 48%;
+
                 li {
                     white-space: nowrap;
                 }
