--- a/src/css/pages/scss/uxui.scss
+++ b/src/css/pages/scss/uxui.scss
@@ -1,77 +1,107 @@
 #uxui {
-    background-attachment: fixed;
-    /* 배경 고정 */
-    background-size: cover;
-    /* 배경이 화면 전체에 맞도록 설정 */
     height: auto;
-    /* 콘텐츠 높이에 따라 확장 */
-    z-index: 0;
 
-    .jellyfish_four {
-        position: absolute;
-        left: 20%;
-        top: 5%;
-        z-index: 99;
+    &::after {
+        background-attachment: fixed;
+        z-index: 1;
     }
 
-    .uxui_poster-box {
-        position: relative;
-        height: 80vh;
+    .uxui_poster-container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        height: 100%;
 
-        &::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background: url(/src/assets/images/light-bg.png) no-repeat center center;
-            background-size: cover;
-            opacity: .5;
-        }
+        .uxui_poster-box {
+            position: relative;
+            z-index: 10;
 
-        .uxui_poster {
-            position: absolute;
-            background-color: rgba(255, 255, 255, 0.5);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
+            .uxui_poster {
+                position: relative;
+                height: auto;
 
-        .uxui_poster-title {
-            position: absolute;
+                .uxui_poster-img{
+                    position: relative;
+                    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
-            font-family: var(--mainEng-font);
-            text-transform: capitalize;
-            white-space: nowrap;
-        }
+                    img{
+                        width: 100%;
+                        object-fit: cover;
+                    }
 
-        .uxui_desc {
-            position: absolute;
+                    &::after {
+                        content: '';
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        background-color: rgba(0, 0, 0, 0.5);
+                        transition: .35s;
+                    }
 
-            h2 {
-                border-bottom: 2px solid #fff;
-                font-family: var(--mainNum-font);
-                font-size: var(--font-size-Num1-P);
+                    &:hover {
+                        &::after {
+                            background-color: rgba(0, 0, 0, 0);
+                        }
+                    }
+                }
             }
 
-            .uxui_name {
+            .uxui_poster-title {
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
                 font-family: var(--mainEng-font);
-                font-size: var(--font-size-EngST1-P);
                 text-transform: capitalize;
-                padding: 10px 0;
+                white-space: nowrap;
+            }
 
+            .uxui_desc {
+                position: absolute;
+
+                h2 {
+                    border-bottom: 2px solid #fff;
+                    font-family: var(--mainNum-font);
+                    font-size: var(--font-size-Num1-P);
+                }
+
+                .uxui_skill {
+                    font-family: var(--mainEng-font);
+                    font-size: var(--font-size-EngST1-P);
+                    text-transform: capitalize;
+                    padding: 10px 0;
+                }
+
+                .uxui_date {
+                    font-family: var(--mainNum-font);
+                }
             }
         }
-
     }
 }
 
 @media (max-width:767px) {
+
+    #uxui {
+        padding: 180px 0;
+
+    }
+
+    .uxui_poster-container {
+        flex-direction: column;
+        gap: 200px;
+        padding-bottom: 80px;
+
+        .uxui_poster-box {
+            width: 350px;
+            margin: auto;
+        }
+    }
+
     .uxui_poster {
         width: 350px;
-        height: 450px;
-        top: 10%;
-        left: 50%;
-        transform: translateX(-50%);
+        // height: 450px;
     }
 
     .uxui_desc {
@@ -85,16 +115,23 @@
 
     .uxui_poster-title {
         font-size: 4rem;
-        top: 40%;
-        left: 50%;
-        transform: translateX(-50%);
+        left: -30px;
     }
 }
 
 @media (min-width:768px) {
+
+    .uxui_poster-container {
+        padding: 0 40px 200px 40px;
+    }
+
+    .uxui_poster-box {
+        height: 350px;
+        width: 45%;
+    }
+
     .uxui_poster {
         width: 350px;
-        height: 450px;
     }
 
     .uxui_desc {
@@ -107,38 +144,35 @@
     }
 
     .uxui_poster-title {
-        font-size: 5em;
+        font-size: 4em;
+        left: -30px;
     }
 
     .uxui_poster-box:nth-child(odd) {
-        .uxui_poster {
-            top: 10%;
-            left: 20%;
-        }
-
-        .uxui_poster-title {
-            top: 40%;
-            left: 15%;
-        }
+        margin-top: 100px;
     }
 
     .uxui_poster-box:nth-child(even) {
-        .uxui_poster {
-            top: 10%;
-            right: 20%;
-        }
-
-        .uxui_poster-title {
-            top: 40%;
-            right: 15%;
-        }
+        margin-top: 400px;
     }
 }
 
 @media (min-width:1024px) {
+
+    #uxui {
+        padding: 100px 80px;
+    }
+
+    .uxui_poster-container {
+        padding: 0 50px;
+    }
+
+    .uxui_poster-box {
+        height: 400px;
+    }
+
     .uxui_poster {
         width: 400px;
-        height: 500px;
     }
 
     .uxui_desc {
@@ -151,34 +185,7 @@
     }
 
     .uxui_poster-title {
-        font-size: 6rem;
-    }
-
-    .uxui_poster-box:nth-child(odd) {
-        .uxui_poster {
-            top: 50%;
-            left: 20%;
-            transform: translateY(-50%);
-        }
-
-        .uxui_poster-title {
-            top: 50%;
-            left: 15%;
-            transform: translateY(-50%);
-        }
-    }
-
-    .uxui_poster-box:nth-child(even) {
-        .uxui_poster {
-            top: 50%;
-            right: 30%;
-            transform: translateY(-50%);
-        }
-
-        .uxui_poster-title {
-            top: 50%;
-            right: 25%;
-            transform: translateY(-50%);
-        }
+        font-size: 5rem;
+        left: -50px;
     }
 }
