--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -1,12 +1,5 @@
 #work {
 
-    .jellyfish_three {
-        position: absolute;
-        left: 50%;
-        top: 10%;
-        z-index: 99;
-    }
-
     .workSwiper {
         position: absolute;
         left: 50%;
@@ -17,16 +10,33 @@
         .swiper-slide {
             margin: auto;
             border-radius: 50%;
-            // text-align: center;
-            // margin-left:6px;
-
             transition: .35s;
+            position: relative;
+
+            &:hover{
+                &::after{
+                    background-color: rgba(0, 0, 0, 0);
+                }
+            }
+
+            // &::after{
+            //     content: '';
+            //     width: 100%;
+            //     height: 100%;
+            //     position: absolute;
+            //     left: 0;
+            //     top: 0;
+            //     background-color: rgba(0, 0, 0, .5);
+            //     border-radius: 50%;
+            //     transition: .5s;
+            // }
 
             img {
                 display: block;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border-radius: 50%;
             }
 
             .work_name {
@@ -64,7 +74,7 @@
             /* 활성화된 슬라이드 색상 변경 */
 
 
-            &::after {
+            &::before {
                 background: url(/src/assets/images/work-point.png) no-repeat center / contain;
                 content: '';
                 padding: calc(380px / 2);
@@ -83,13 +93,12 @@
 @media (min-width:768px) {
 
     .workSwiper {
-        width: 94%;
+        width: 90%;
 
         .swiper-slide {
             width: 250px !important;
             height: 250px;
             background-color: rgba(255, 255, 255, .5);
-            margin-left: 6px;
 
             .work_name {
                 display: none;
@@ -99,15 +108,22 @@
         .swiper-slide.swiper-slide-active {
             position: relative;
             transform: scale(1.3);
-            /* 가운데 슬라이드 크기 */
-            background: var(--mainColor100-color);
-            /* 활성화된 슬라이드 색상 변경 */
+            
+            &:hover{
+                &::after{
+                    background-color: rgba(0, 0, 0, 0);
+                }
+
+                &::before{
+                    opacity: 1;
+                }
+            }
 
             .work_name {
                 display: block;
             }
 
-            &::after {
+            &::before {
                 background: url(/src/assets/images/work-point.png) no-repeat center / contain;
                 content: '';
                 padding: calc(320px / 2);
@@ -117,6 +133,8 @@
                 transform: translate(-50%, -50%);
                 user-select: none;
                 pointer-events: none;
+                // opacity: .5;
+                transition: .35s;
             }
 
         }
