--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -1,10 +1,4 @@
 @charset "UTF-8";
-#work .jellyfish_three {
-  position: absolute;
-  left: 50%;
-  top: 10%;
-  z-index: 99;
-}
 #work .workSwiper {
   position: absolute;
   left: 50%;
@@ -16,12 +10,17 @@
   margin: auto;
   border-radius: 50%;
   transition: 0.35s;
+  position: relative;
+}
+#work .workSwiper .swiper-slide:hover::after {
+  background-color: rgba(0, 0, 0, 0);
 }
 #work .workSwiper .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 50%;
 }
 #work .workSwiper .swiper-slide .work_name {
   position: absolute;
@@ -51,7 +50,7 @@
     background: var(--mainColor100-color);
     /* 활성화된 슬라이드 색상 변경 */
   }
-  .workSwiper .swiper-slide::after {
+  .workSwiper .swiper-slide::before {
     background: url(/src/assets/images/work-point.png) no-repeat center/contain;
     content: "";
     padding: 190px;
@@ -65,13 +64,12 @@
 }
 @media (min-width: 768px) {
   .workSwiper {
-    width: 94%;
+    width: 90%;
   }
   .workSwiper .swiper-slide {
     width: 250px !important;
     height: 250px;
     background-color: rgba(255, 255, 255, 0.5);
-    margin-left: 6px;
   }
   .workSwiper .swiper-slide .work_name {
     display: none;
@@ -79,14 +77,17 @@
   .workSwiper .swiper-slide.swiper-slide-active {
     position: relative;
     transform: scale(1.3);
-    /* 가운데 슬라이드 크기 */
-    background: var(--mainColor100-color);
-    /* 활성화된 슬라이드 색상 변경 */
+  }
+  .workSwiper .swiper-slide.swiper-slide-active:hover::after {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .workSwiper .swiper-slide.swiper-slide-active:hover::before {
+    opacity: 1;
   }
   .workSwiper .swiper-slide.swiper-slide-active .work_name {
     display: block;
   }
-  .workSwiper .swiper-slide.swiper-slide-active::after {
+  .workSwiper .swiper-slide.swiper-slide-active::before {
     background: url(/src/assets/images/work-point.png) no-repeat center/contain;
     content: "";
     padding: 160px;
@@ -96,5 +97,6 @@
     transform: translate(-50%, -50%);
     user-select: none;
     pointer-events: none;
+    transition: 0.35s;
   }
 }
