--- a/src/css/pages/scss/intro.scss
+++ b/src/css/pages/scss/intro.scss
@@ -1,9 +1,13 @@
 #intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+
+    .intro_box {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 
     h2 {
         font-size: 5rem;
@@ -19,22 +23,22 @@
         }
     }
 
-    .dots{
+    .dots {
         width: 50px;
-       padding: 40px;
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       justify-content: center;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
-        .dot{
+        .dot {
             background-color: var(--subColor200-color);
             border-radius: 50%;
             margin: 10px auto;
         }
     }
 
-    
+
     p {
         font-size: 1.3rem;
         line-height: 1.5;
