--- a/src/css/pages/uxui.css
+++ b/src/css/pages/uxui.css
@@ -5,29 +5,29 @@
   background-attachment: fixed;
   z-index: 1;
 }
-#uxui .uxui_poster-container {
+#uxui .uxui_box .uxui_poster-container {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   height: 100%;
 }
-#uxui .uxui_poster-container .uxui_poster-box {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box {
   position: relative;
   z-index: 10;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_poster {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
   position: relative;
   height: auto;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img {
   position: relative;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img img {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img img {
   width: 100%;
   object-fit: cover;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img::after {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img::after {
   content: "";
   width: 100%;
   height: 100%;
@@ -37,10 +37,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   transition: 0.35s;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img:hover::after {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img:hover::after {
   background-color: rgba(0, 0, 0, 0);
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_poster-title {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -48,102 +48,103 @@
   text-transform: capitalize;
   white-space: nowrap;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_desc {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc {
   position: absolute;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_desc h2 {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc h2 {
   border-bottom: 2px solid #fff;
   font-family: var(--mainNum-font);
   font-size: var(--font-size-Num1-P);
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_desc .uxui_skill {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc .uxui_skill {
   font-family: var(--mainEng-font);
   font-size: var(--font-size-EngST1-P);
   text-transform: capitalize;
   padding: 10px 0;
 }
-#uxui .uxui_poster-container .uxui_poster-box .uxui_desc .uxui_date {
+#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc .uxui_date {
   font-family: var(--mainNum-font);
 }
 
 @media (max-width: 767px) {
-  #uxui {
+  #uxui .uxui_box {
     padding: 180px 0;
   }
-  .uxui_poster-container {
+  #uxui .uxui_box .uxui_poster-container {
     flex-direction: column;
     gap: 200px;
     padding-bottom: 80px;
   }
-  .uxui_poster-container .uxui_poster-box {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box {
     width: 350px;
     margin: auto;
   }
-  .uxui_poster {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
     width: 350px;
   }
-  .uxui_desc {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc {
     left: 0;
     bottom: -140px;
   }
-  .uxui_desc h2 {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc h2 {
     width: 350px;
   }
-  .uxui_poster-title {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
     font-size: 4rem;
     left: -30px;
   }
 }
 @media (min-width: 768px) {
-  .uxui_poster-container {
+  .uxui_box .uxui_poster-container {
     padding: 0 40px 200px 40px;
   }
-  .uxui_poster-box {
+  .uxui_box .uxui_poster-container .uxui_poster-box {
     height: 350px;
     width: 45%;
+    border: 1px solid #000;
   }
-  .uxui_poster {
+  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
     width: 350px;
   }
-  .uxui_desc {
+  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc {
     left: 0;
     bottom: -140px;
   }
-  .uxui_desc h2 {
+  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc h2 {
     width: 350px;
   }
-  .uxui_poster-title {
+  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
     font-size: 4em;
     left: -30px;
   }
-  .uxui_poster-box:nth-child(odd) {
+  .uxui_box .uxui_poster-container .uxui_poster-box:nth-child(odd) {
     margin-top: 100px;
   }
-  .uxui_poster-box:nth-child(even) {
+  .uxui_box .uxui_poster-container .uxui_poster-box:nth-child(even) {
     margin-top: 400px;
   }
 }
 @media (min-width: 1024px) {
-  #uxui {
+  #uxui .uxui_box {
     padding: 100px 80px;
   }
-  .uxui_poster-container {
+  #uxui .uxui_box .uxui_poster-container {
     padding: 0 50px;
   }
-  .uxui_poster-box {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box {
     height: 400px;
   }
-  .uxui_poster {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
     width: 400px;
   }
-  .uxui_desc {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc {
     left: 110%;
     top: 0;
   }
-  .uxui_desc h2 {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc h2 {
     width: 400px;
   }
-  .uxui_poster-title {
+  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
     font-size: 5rem;
     left: -50px;
   }
