--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ section {
     height: 100vh;
     position: relative;
     overflow: hidden;
-    /* border: 1px solid #000; */
+    border: 1px solid #000;
 }
 
 section::after{
